# pysqlite3

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  TODO  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_build_windows.yml  tests.yaml  wheel.yaml  wheels.yaml
build-scripts/: README  _build_wheels.sh  build.sh  cleanup.sh  fetch_source.py
lib/: dbapi2.py
pysqlite3/: __init__.py  dbapi2.py
src/: blob.c  cache.c  connection.c  connection.h  cursor.c  cursor.h  microprotocols.c  module.c  row.c  statement.c  util.c  util.h
test/: __main__.py  backup.py  dbapi.py  factory.py  hooks.py  regression.py  transactions.py  types.py  userfunctions.py
tests/: __main__.py  backup.py  dbapi.py  factory.py  hooks.py  regression.py  transactions.py  ttypes.py  userfunctions.py
